<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/length"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/enter_length"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/width"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/edt_length"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edt_length"
            app:layout_constraintTop_toBottomOf="@+id/edt_length"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/enter_width"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/height"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/edt_width"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edt_width"
            app:layout_constraintTop_toBottomOf="@+id/edt_width"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/enter_height"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="204dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#504F4F"
            android:fontFamily="sans-serif"
            android:text="@string/save"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/edt_height"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/edt_height"
            app:layout_constraintTop_toBottomOf="@+id/edt_height"
            android:background="@drawable/custom_buttom"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/btn_save"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_save"
            app:layout_constraintTop_toBottomOf="@+id/btn_save"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/btn_calculate_volume"
                android:layout_width="204dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:backgroundTint="#219C00"
                android:text="@string/calculate_volume"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_calculate_circumference"
                android:layout_width="204dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:backgroundTint="#D60909"
                android:layout_gravity="center"
                android:text="@string/calculate_circumference"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_calculate_surface_area"
                android:layout_width="204dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:backgroundTint="#673AB7"
                android:text="@string/calculate_surface_area"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/result"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btn_save"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/btn_save"
            app:layout_constraintTop_toBottomOf="@+id/btn_save"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>